@@ -1,3 +1,5 @@
+# https://fsymbols.com/generators/smallcaps/
+
 from lib.color import Color
 
 
@@ -160,4 +162,12 @@ class Logo:
 █─▄▄▄▄█▄─▄█▄─▄▄─███▄─▄▄─█▄─▄█▄─▀█▄─▄█─▄▄▄▄█
 █▄▄▄▄─██─███─▄▄▄████─▄▄▄██─███─█▄▀─██─██▄─█
 ▀▄▄▄▄▄▀▄▄▄▀▄▄▄▀▀▀▀▀▄▄▄▀▀▀▄▄▄▀▄▄▄▀▀▄▄▀▄▄▄▄▄▀
+            '''
+
+        if self.script == 'wssend':
+            return '''
+█████████████████████████████████████████████
+█▄─█▀▀▀█─▄█─▄▄▄▄███─▄▄▄▄█▄─▄▄─█▄─▀█▄─▄█▄─▄▄▀█
+██─█─█─█─██▄▄▄▄─███▄▄▄▄─██─▄█▀██─█▄▀─███─██─█
+▀▀▄▄▄▀▄▄▄▀▀▄▄▄▄▄▀▀▀▄▄▄▄▄▀▄▄▄▄▄▀▄▄▄▀▀▄▄▀▄▄▄▄▀▀
             '''
